# axiom-mobile

./: .gitignore  LICENSE  README.md
app/: README.md
data/: README.md
docs/: DEMO_FLOW.md  DESIGN_SYSTEM.md  DEVICE_PROFILES.md  INSTRUMENTS_RUNBOOK.md  LEARNING_CURVES.md  MODEL_SELECTION.md  PRIVATE_DATA_SETUP.md  SCREENSHOT_AUTOMATION.md  SELECTION_STRATEGIES.md  STATISTICAL_ANALYSIS.md  TASKS.md  TIMELINE.md
ml/: pyproject.toml
ml/configs/models/: florence_2_base.json  llava_mobile.json  question_lookup_v0.json  qwen_vl_chat_int4.json  tiny_multimodal_v0.json  tiny_multimodal_v1.json
ml/scripts/: annotation_qc.py  build_paper_assets.py  build_presentation_assets.py  export_coreml.py  generate_learning_curves.py  index_generated_screenshots.py  locate_screenshot_root.py  run_baseline.py  run_selection_sweep.py  run_statistical_analysis.py  run_trainable_baseline.py  stage_device_profile_session.py  summarize_baseline.py  summarize_device_profiles.py
ml/src/axiom/: __init__.py
ml/src/axiom/analysis/: __init__.py  schemas.py  stats.py
ml/src/axiom/data/: __init__.py  images.py  loader.py
ml/src/axiom/eval/: __init__.py  metrics.py
ml/src/axiom/models/: __init__.py  base.py  question_lookup.py  registry.py  specs.py  tiny_multimodal.py
ml/src/axiom/results/: __init__.py  device_profiles.py  io.py  schema.py
ml/src/axiom/selection/: __init__.py  base.py  diversity.py  kg_guided.py  random.py  registry.py  uncertainty.py
paper/: AXIOM_Mobile_Paper.docx  PAPER_DRAFT_v1.md  PAPER_DRAFT_v2.md  PAPER_DRAFT_v3.md  README.md  generate_paper_docx.py
(+136 files in other folders)
